# openwrt-rust-mqtt

./: .gitignore  Cargo.toml  Makefile
.cargo/: config
src/: main.rs  main_minimq.rs
src/pub/: main.rs
src/sub/: main.rs
