cargo-features = ["strip"]

[package]
name = "rust_mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#minimq = "*"
#std-embedded-nal = "*"
#std-embedded-time = "*"

paho-mqtt = { version = "*", default-features = false, features = ["bundled"] }

#rumqttc = "0.10.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
codegen-units = 1
panic = "abort"

