[package]
name = "rust_mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { version = "*", default-features = false, features = ["bundled"] }
tokio-modbus = { version = "*", default-features = true, features = ["tcp", "rtu", "sync"] }
tokio-serial = "*"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
opt-level = "z"  # Optimize for size.
codegen-units = 1
panic = "abort"
