[package]
name = "rust_mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "*"
#futures = "*"
#tokio = "^1.0"
#log = "*"
#env_logger = "*"

#paho-mqtt = { version = "*", default-features = false, features = ["bundled"] }

#minimq = "*"
#std-embedded-nal = "*"
#std-embedded-time = "*"


#[[bin]]
#name = "sub"
#path = "src/sub/main.rs"
#
#[[bin]]
#name = "pub"
#path = "src/pub/main.rs"